fix: fixed text overflow in one-card-news

--- a/src/styles/template-parts-styles/one-card-news.scss
+++ b/src/styles/template-parts-styles/one-card-news.scss
@@ -27,6 +27,18 @@
             margin-top: 24px;
         }
     }
+    &__news-section__text-wrapper {
+        overflow: hidden;
+        max-height: -webkit-min-content;
+        max-height: -moz-min-content;
+        max-height: min-content;
+        -ms-flex-negative: 1;
+        flex-shrink: 1;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+    }
     &__news-section__name {
         font-weight: 800;
         font-size: 20px;
@@ -38,19 +50,7 @@
         font-size: 16px;
         font-weight: 500;
         line-height: 1.3;
-        overflow: hidden;
-        max-height: -webkit-min-content;
-        max-height: -moz-min-content;
-        max-height: min-content;
-        -ms-flex-negative: 1;
-        flex-shrink: 1;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        @media screen and (min-width: $tablet) {
-            -webkit-line-clamp: 5;
-        }
+       
     }
     &__news-section__button {
         margin-top: auto;
